Fix nav z-index

--- a/app/assets/stylesheets/base/_app_layout.scss
+++ b/app/assets/stylesheets/base/_app_layout.scss
@@ -10,4 +10,5 @@ body {
 .page-header-container {
   position: fixed;
   width: 100%;
+  z-index: 9;
 }
