--- a/app/assets/stylesheets/components/_wordcross.scss
+++ b/app/assets/stylesheets/components/_wordcross.scss
@@ -85,7 +85,7 @@ header.wordcross-header {
 }
 
 .wordcross-box {
-  border: solid 2px $black;
+  border: solid 2px blue;
   height: 100px;
   width: 100px;
   font-family: Franklin;
